@@ -1,8 +1,10 @@
 #!/usr/bin/env perl
-# updmap-setup-kanji: setup Japanese font embedding
+# updmap-kanji: setup Japanese font embedding
+#
+# formerly updmap-setup-kanji, and updmap-otf
 #
 # Copyright 2004-2006 by KOBAYASHI R. Taizo for the shell version (updmap-otf)
-# Copyright 2011-2012 by PREINING Norbert
+# Copyright 2011-2013 by PREINING Norbert
 #
 # This file is licensed under GPL version 3 or any later version.
 # For copyright statements see end of file.
@@ -18,8 +20,8 @@ $^W = 1;
 use Getopt::Long qw(:config no_autoabbrev ignore_case_always);
 use strict;
 
-my $prg = "updmap-setup-kanji";
-my $vers = "0.9.6";
+my $prg = "updmap-kanji";
+my $vers = "0.9.7";
 my $version = '$Id$';
 
 my $updmap_real = "updmap";
